<resources>
    <string name="app_name">TaxFileManagementApp</string>
    <string name="welcome_image_viewer">Welcome Image viewer</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="company_name">Company Name</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="province">Province</string>
    <string name="logout">Logout</string>
    <string name="back_btn">Back Btn</string>
    <string name="back_to_login_page_btn">back to login page btn</string>
    <string name="update">update</string>
    <string name="personal_details">Personal Details</string>
</resources>