<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".SignupActivity">

        <EditText
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signupPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/signupCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/company_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/website"
            android:inputType="textUri" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signupSuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/suite"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/street"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/city"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/province"
            android:inputType="text" />

        <EditText
            android:id="@+id/signupPostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="5dp"
            android:hint="@string/postal_code"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/registerBtn"
                    android:onClick="createCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/register" />
        </LinearLayout>
</android.widget.LinearLayout>