<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/loginImageViewer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/welcome_image_viewer" />

    <EditText
        android:id="@+id/userEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:inputType="textPassword"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signupBtn"
            android:onClick="handleSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/signup"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/loginBtn"
            android:onClick="handleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/login"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>
</LinearLayout>