<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/customerDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/customerDetailSuite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/customerDetailPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"/>


    <Spinner
        android:id="@+id/customerDetailStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/customerHomeUpdateBtn"
            android:onClick="updateCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/update"
            android:textSize="20sp"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>